--- a/app/templates/request/pickup.html
+++ b/app/templates/request/pickup.html
@@ -4,7 +4,7 @@
 {% block app_content %}
 <h1>Lấy hàng</h1>
 <br>
-<form action="" method="post">
+<form action="" method="post" autocomplete="off">
     {{ form.hidden_tag() }}
     <div class="row" style="margin: auto;">
         <p>
